--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tiler-arcgis-compact",
   "version": "0.1.0",
-  "description": "A map tile reader for compact tiles by ESRI ArcGIS",
+  "description": "A nodejs map tile reader for compact tiles by ESRI ArcGIS",
   "license": "MIT",
   "repository": {
     "type": "git",
